package Command;

public class Light {
    public void on(){
        System.out.println("灯已打开");
    }
    public void off(){
        System.out.println("灯已关闭");
    }
}
