package MeetingSystem;

public interface Command {
    
    void execute();
    void undo();
}
